--- a/lab1/aboutme.html
+++ b/lab1/aboutme.html
@@ -11,10 +11,10 @@
 <hr/>
 <h3>My Classes This Quarter</h3>
 <ul>
-    <li><a href="">ASD</a></li>
-    <li><a href="">WAP</a></li>
-    <li><a href="">WAA</a></li>
-    <li><a href="">Algorithms</a></li>
+    <li><a href="https://compro.mum.edu/courses/#toggle-id-2">ASD</a></li>
+    <li><a href="https://compro.mum.edu/courses/#toggle-id-2">WAP</a></li>
+    <li><a href="https://compro.mum.edu/courses/#toggle-id-2">WAA</a></li>
+    <li><a href="https://compro.mum.edu/courses/#toggle-id-2">Algorithms</a></li>
 </ul>
 <h3>My Favorite Movies</h3>
 <ol>
