--- a/ServletQuiz.html
+++ b/ServletQuiz.html
@@ -10,7 +10,7 @@
 <h1>Servlet quis 5/3/2019</h1>
 <ol>
     <li>
-        What is the difference between a web server and a web container?
+        What is the difference beAtween a web server and a web container?
         <p>Web server is a unit that manage web container and another components in this server, servlets, php.</p>
     </li>
     <li>
