--- a/Week2_Saturday/decoratemytext.html
+++ b/Week2_Saturday/decoratemytext.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
 	<title>Text Decorator</title>
 	<link href="decoratemytext.css" type="text/css" rel="stylesheet" />
 	<script src="decoratemytext.js"></script>
@@ -27,7 +28,12 @@
 	<input id="check" type="checkbox">Bling<br>
 	<div></div><button id="atinlay">Igpay Atinlay</button>
 	<button id="malkovitch">Malkovitch</button>
-	</div>
 </fieldset>
+<a href="http://validator.w3.org/check/referer">
+	<img src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML5">
+</a><br>
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+	<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS">
+</a><br>
 </body>
 </html>
