--- a/ModulesandClosureLab_Week3_Tuesday/1/index.html
+++ b/ModulesandClosureLab_Week3_Tuesday/1/index.html
@@ -6,7 +6,7 @@
     <script src="scr.js"></script>
 </head>
 <body>
-<button onclick="rudyTimer">Click me</button>
+<button onclick="rudyTimer.execute()">Click me</button>
 <a id="output"></a>
 </body>
 </html>
